// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Explainer should render app as unknown in Explainer component if no title 1`] = `
<div
  class="sc-bczRLJ dhqKmX"
>
  <div
    class="sc-gsnTZi gdkTFb"
  >
    <div>
      <strong>
        Unknown App
      </strong>
    </div>
    <div>
      wants to connect to your wallet.
    </div>
  </div>
</div>
`;

exports[`Component: Explainer should render the component with app title 1`] = `
<div
  class="sc-bczRLJ dhqKmX"
>
  <div
    class="sc-gsnTZi gdkTFb"
  >
    <div>
      <strong>
        Test App
      </strong>
    </div>
    <div>
      wants to connect to your wallet.
    </div>
  </div>
</div>
`;
